--- a/romanNumeral.html
+++ b/romanNumeral.html
@@ -4,23 +4,27 @@
         <link rel='stylesheet' href='css/styles.css'>
         <script src='js/jquery-1.11.3.js'></script>
         <script src='js/scripts.js'></script>
-        <title>Roman Numerals</title>
+        <title>Find and Replace</title>
     </head>
     <body>
         <div class="container">
-          <h1>Roman Numeral</h1>
+          <h1>Find and Replace</h1>
 
-          <form id='roman'>
+          <form id='fandr'>
             <div class='form-group'>
-                <label for="number">Enter a number to count to:</label>
-                <input id="number" type="number">
+                <label for="String">Enter text:</label>
+                <input id="String" type="number">
+                <label for="find">Enter a word you would like to be found:</label>
+                <input id="find" type="number">
+                <label for="replace">Enter a word to replace the found word:</label>
+                <input id="replace" type="number">
             </div>
 
-            <button type="submit" class="btn btn-success">Count!</button>
+            <button type="submit" class="btn btn-success">Replace!</button>
           </form>
 
           <div id="result">
-            <h4><span class="roman"></span></h4>
+            <h4><span class="result"></span></h4>
           </div>
         </div>
     </body>
