--- a/findReplace.html
+++ b/findReplace.html
@@ -13,11 +13,11 @@
           <form id='fandr'>
             <div class='form-group'>
                 <label for="String">Enter text:</label>
-                <input id="String" type="number">
+                <input id="String" type="text">
                 <label for="find">Enter a word you would like to be found:</label>
-                <input id="find" type="number">
+                <input id="find" type="text">
                 <label for="replace">Enter a word to replace the found word:</label>
-                <input id="replace" type="number">
+                <input id="replace" type="text">
             </div>
 
             <button type="submit" class="btn btn-success">Replace!</button>
